<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:id="@+id/general"
    android:background="#009688"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <android.support.v7.widget.CardView
        android:layout_marginRight="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="8dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">


        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <RelativeLayout
                android:layout_margin="6dp"
                android:layout_weight="1"
                android:layout_width="0dp"
                android:layout_height="wrap_content">

                <LinearLayout
                    android:id="@+id/layout"
                    android:orientation="horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <TextView
                        android:id="@+id/book_title"
                        android:text="@string/book_title"
                        android:textColor="@color/text_description"
                        android:textAppearance="?android:textAppearanceMedium"
                        android:layout_weight="1"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content" />


                    <TextView
                        android:id="@+id/book_price"
                        android:text="Ron 66.3"
                        android:textColor="@color/price_author"
                        android:textAppearance="?android:textAppearanceSmall"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" />


                </LinearLayout>


                <TextView
                    android:id="@+id/book_autor"
                    android:text="@string/book_author"
                    android:textColor="@color/price_author"
                    android:layout_marginTop="3dp"
                    android:textAppearance="?android:textAppearanceSmall"
                    android:layout_below="@+id/layout"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />

                <TextView
                    android:id="@+id/book_description"
                    android:layout_below="@id/book_autor"
                    android:textColor="@color/text_description"
                    android:layout_marginTop="3dp"
                    android:textAppearance="?android:textAppearanceSmall"
                    android:maxLines="5"
                    android:text="@string/describe"
                    android:textStyle="bold"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />

                <TextView
                    android:id="@+id/book_published"
                    android:layout_below="@id/book_description"
                    android:text="@string/book_date"
                    android:textAppearance="?android:textAppearanceSmall"
                    android:layout_marginTop="3dp"
                    android:textColor="@color/price_author"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />



            </RelativeLayout>


            <ImageView
                android:id="@+id/book_image"
                android:src="@mipmap/ic_book_icon"
                android:layout_margin="6dp"
                android:layout_width="100dp"
                android:layout_height="100dp" />


        </LinearLayout>

    </android.support.v7.widget.CardView>


</LinearLayout>